quorum/test/tests/TypeChecker/Pass/ExpAssignIntegerNumber.quorum
integer i = cast(integer, 7.5)