quorum/test/tests/TypeChecker/Fail/ImpAssignBoolObjInteger.quorum
integer i = 5
Boolean b = i